samples/_failures_safe/1761378030_daae62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90dadd9a.c: In function ‘main’:
./samples/SAFE/__tmp_90dadd9a.c:161:9: error: expected expression at end of input
  161 |         if (results[i].compressed_size < best_size)
      |         ^~
./samples/SAFE/__tmp_90dadd9a.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90dadd9a.c:161:9: error: expected declaration or statement at end of input
